--- a/Todolist-task7/todolist/src/App.css
+++ b/Todolist-task7/todolist/src/App.css
@@ -43,6 +43,18 @@ padding: 0;
   width: 100%;
   height: 100%;
 }
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+html,body,#root{
+  width: 100%;
+  height: 100%;
+  
+}
 .main {
   margin-bottom: 20px;
   background-color: whitesmoke;
